--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "angularx-social-login": "^4.1.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "jquery": "^3.6.0",
