--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "types": [
       "googlemaps"
     ],
+    "strictPropertyInitialization": false,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
