--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ckeditor/ckeditor5-angular": "^4.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^34.0.0",
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
@@ -29,15 +31,17 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "jquery": "^3.6.0",
+    "ng-multiselect-dropdown": "^0.3.8",
     "ngx-sharebuttons": "^10.0.0",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.1",
     "@angular/cli": "~13.2.1",
     "@angular/compiler-cli": "~13.2.0",
+    "@types/ckeditor__ckeditor5-build-classic": "^29.0.1",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
